# gtec-bcilab

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Now In OpenViBE  README  README.txt
applications/examples/convert/: CMakeLists.txt
applications/examples/convert/share/: csv2edf.xml  csv2gdf.xml  csv2ov.xml  dat2csv.xml  dat2ov.xml  gdf2csv.xml  gdf2ov.xml  ov2csv.xml  vhdr2csv.xml  vhdr2edf.xml  vhdr2gdf.xml  vhdr2ov.xml
applications/examples/convert/src/: openvibe-convert-real.sh-base
applications/platform/acquisition-server/: CMakeLists.txt
applications/platform/acquisition-server/include/: ovasIAcquisitionServerPlugin.h  ovasIDriver.h  ovasIHeader.h
applications/platform/acquisition-server/share/: interface-BioSemi-ActiveTwo.ui  interface-Generic-RawFileReader.ui  interface-Generic-RawTelnetReader.ui  interface-LabStreamingLayer.ui  interface-MCSNVXDriver.ui  interface.ui-base
applications/platform/acquisition-server/src/: ovasCAcquisitionServer.cpp  ovasCAcquisitionServer.h  ovasCAcquisitionServerGUI.cpp  ovasCAcquisitionServerGUI.h  ovasCAcquisitionServerThread.h  ovasCConfigurationBuilder.cpp  ovasCConfigurationNetworkBuilder.cpp  ovasCHeader.cpp  ovasCHeader.h  ovasCSettingsHelper.cpp  ovasCSettingsHelper.h  ovasCSettingsHelperOperators.h  ovas_main.cpp
applications/platform/acquisition-server/src/drivers/biosemi-activetwo/: mCBridgeBioSemiActiveTwo.cpp  mCBridgeBioSemiActiveTwo.h  ovasCConfigurationBioSemiActiveTwo.cpp  ovasCConfigurationBioSemiActiveTwo.h  ovasCDriverBioSemiActiveTwo.cpp  ovasCDriverBioSemiActiveTwo.h
applications/platform/acquisition-server/src/drivers/brainproducts-actichamp/: ovasCConfigurationBrainProductsActiCHamp.cpp  ovasCConfigurationBrainProductsActiCHamp.h  ovasCDriverBrainProductsActiCHamp.cpp  ovasCDriverBrainProductsActiCHamp.h
applications/platform/acquisition-server/src/drivers/brainproducts-brainampseries/: ovasCDriverBrainProductsBrainampSeries.cpp  ovasCDriverBrainProductsBrainampSeries.h  ovasCHeaderAdapterBrainProductsBrainampSeries.cpp
applications/platform/acquisition-server/src/drivers/brainproducts-vamp/: ovasCConfigurationBrainProductsVAmp.cpp  ovasCDriverBrainProductsVAmp.cpp  ovasCDriverBrainProductsVAmp.h  ovasCHeaderBrainProductsVAmp.cpp  ovasCHeaderBrainProductsVAmp.h
applications/platform/acquisition-server/src/drivers/egi-ampserver/: ovasCConfigurationEGIAmpServer.cpp  ovasCDriverEGIAmpServer.cpp  ovasCDriverEGIAmpServer.h
applications/platform/acquisition-server/src/drivers/emotiv-epoc/: ovasCConfigurationEmotivEPOC.cpp  ovasCDriverEmotivEPOC.cpp  ovasCDriverEmotivEPOC.h
applications/platform/acquisition-server/src/drivers/generic-oscillator/: ovasCConfigurationDriverGenericOscillator.cpp  ovasCConfigurationDriverGenericOscillator.h  ovasCDriverGenericOscillator.cpp  ovasCDriverGenericOscillator.h
applications/platform/acquisition-server/src/drivers/generic-raw-reader/: ovasCConfigurationGenericRawReader.cpp  ovasCConfigurationGenericRawReader.h  ovasCDriverGenericRawFileReader.cpp  ovasCDriverGenericRawFileReader.h  ovasCDriverGenericRawReader.cpp  ovasCDriverGenericRawReader.h  ovasCDriverGenericRawTelnetReader.cpp  ovasCDriverGenericRawTelnetReader.h
applications/platform/acquisition-server/src/drivers/generic-sawtooth/: ovasCDriverGenericSawTooth.cpp
applications/platform/acquisition-server/src/drivers/labstreaminglayer/: ovasCConfigurationLabStreamingLayer.cpp  ovasCConfigurationLabStreamingLayer.h  ovasCDriverLabStreamingLayer.cpp  ovasCDriverLabStreamingLayer.h
applications/platform/acquisition-server/src/drivers/mcs-nvx/: ovasCConfigurationMCSNVXDriver.cpp  ovasCConfigurationMCSNVXDriver.h  ovasCDriverMCSNVXDriver.cpp  ovasCDriverMCSNVXDriver.h
applications/platform/acquisition-server/src/drivers/micromed-systemplusevolution/: ovasCDriverMicromedSystemPlusEvolution.cpp  ovasCDriverMicromedSystemPlusEvolution.h
applications/platform/acquisition-server/src/drivers/mindmedia-nexus32b/: ovasCDriverMindMediaNeXus32B.cpp  ovasCDriverMindMediaNeXus32B.h
applications/platform/acquisition-server/src/drivers/neuroelectrics-enobio3g/: ovasCConfigurationEnobio3G.cpp  ovasCConfigurationEnobio3G.h  ovasCDriverEnobio3G.cpp  ovasCDriverEnobio3G.h
applications/platform/acquisition-server/src/drivers/neurosky-mindset/: ovasCConfigurationNeuroskyMindset.cpp  ovasCDriverNeuroskyMindset.cpp  ovasCDriverNeuroskyMindset.h
applications/platform/acquisition-server/src/drivers/tmsi/: ovasCConfigurationTMSi.cpp  ovasCConfigurationTMSi.h  ovasCDriverTMSi.cpp  ovasCDriverTMSi.h  ovasCTMSiAccess.cpp  ovasCTMSiAccess.h
applications/platform/acquisition-server/src/drivers/tmsi-refa32b/: ovasCConfigurationTMSIRefa32B.cpp  ovasCConfigurationTMSIRefa32B.h  ovasCDriverTMSiRefa32B.cpp  ovasCDriverTMSiRefa32B.h
contrib/applications/platform/P300Stimulator/: CMakeLists.txt  ovexP300Visualiser.cpp  ovexP300Visualiser.h
contrib/applications/platform/P300Stimulator/doc/: doxygen-coadapt-p300stimulator.conf
contrib/applications/platform/P300Stimulator/src/: ova_defines.h  ovexP300SequenceFileWriter.cpp  ovexP300SequenceFileWriter.h  ovexP300SequenceWriter.h  ovexP300SharedMemoryReader.cpp  ovexP300SharedMemoryReader.h
contrib/applications/platform/P300Stimulator/src/evidence-accumulation/: ovexP300CEvidenceAccumulator.h  ovexP300IEvidenceAccumulator.h  ovexP300Legacy.h
contrib/applications/platform/P300Stimulator/src/handlers/: ovexBackspaceHandler.cpp  ovexBackspaceHandler.h  ovexP300KeyboardHandler.cpp  ovexP300KeyboardHandler.h  ovexP300PredictionboardHandler.cpp  ovexP300PredictionboardHandler.h  ovexP300ResultAreaHandler.cpp  ovexP300ResultAreaHandler.h  ovexP300TargetAreaHandler.cpp  ovexP300TargetAreaHandler.h  ovexUndoHandler.cpp  ovexUndoHandler.h
contrib/applications/platform/P300Stimulator/test/: CMakeLists.txt  DartTestfile.txt  ExternalStimulatorReferenceComparator.xml  launch.py  p300-speller-replay.xml  scenario.conf
modules/ebml/test/: CMakeLists.txt  DartTestfile.txt  ref_data.ebml  ref_result.txt  test_ebml_read.cpp  test_ebml_tree.cpp  test_ebml_write.cpp
src/: Queue.h  (+5 more)
(+1118 files in other folders)
